--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     </head>
 
     <body>
-        <h1>Peace1</h1>
-        <h1>How are you Feeling?</h1>
+        <img src="sondra.jpg"
+        alt="Kasondra's Headshot"/>
+        <h1>Kasondra Fagan</h1>
+        <h5>Business Owner</h5>
     </body>
 </html>
