Removed default brower styling

--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>    
-        <title>Kasondra aka Sondra </title>
+        <title>Kasondra  Fagan </title>
+    <link rel="stylesheet"href="styles.css"/>
     </head>
 
     <body>
         <img src="sondra.jpg"
         alt="Kasondra's Headshot"/>
         <h1>Kasondra Fagan</h1>
-        <h5>Business Owner</h5>
+        <p>Business Owner</p>
     </body>
 </html>
