Added sweet twirly glowing hero image

--- a/index.html
+++ b/index.html
@@ -4,11 +4,17 @@
         <title>Kasondra  Fagan </title>
     <link rel="stylesheet"href="styles.css"/>
     </head>
-
     <body>
-        <img src="sondra.jpg"
-        alt="Kasondra's Headshot"/>
+        <section class="hero">
+             <header>
+            <div class="headshot">
+                <img src="photo to use.jpg" alt="Kasondra's Headshot"/>
+            </div>
         <h1>Kasondra Fagan</h1>
-        <p>Business Owner</p>
+        <p>Ceo Blaque Sol LLC</p>
+        <p>Mississippi Coding Academy Student</p>
+        <p>C# Web Developer</p>    
+    </header>
+        </section>
     </body>
 </html>
