--- a/index.html
+++ b/index.html
@@ -16,5 +16,10 @@
         <p>C# Web Developer</p>    
     </header>
         </section>
+            <h1>Test 1</h1>
+        <section>
+
+        </section>
+            <h1>Test 2</h1>
     </body>
 </html>
