--- a/index.html
+++ b/index.html
@@ -13,7 +13,15 @@
         <h1>Kasondra Fagan</h1>
         <p>Ceo Blaque Sol LLC</p>
         <p>Mississippi Coding Academy Student</p>
-        <p>C# Web Developer</p>    
+        <p>C# Web Developer</p>  
+        <ul>
+            <li><a
+                ></a></li>
+        </ul>  
+        <p> Peace.
+            My life is consider to become more 
+
+        </p>
     </header>
         </section>
             <h1>Test 1</h1>
@@ -21,5 +29,10 @@
 
         </section>
             <h1>Test 2</h1>
+        <section>
+
+        </section>
+            <h1>Test 3</h1>
+        <section>
     </body>
 </html>
